# wasm

./: Cargo.toml  flake.nix
examples/paint/: Cargo.toml  index.html
examples/paint/src/: main.rs
src/: lib.rs  main.rs
