[package]
name = "paint"
version = "0.1.0"
authors = ["Kirill Radzikhovskyy <kirillrdy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "*"
geo = "^0.23.1"
geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }

[dependencies.web-sys]
version = "*"
features = ['Performance', 'console']

[dependencies.wasm]
path = "../../"
